--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Holger Graef
 logo: /assets/img/logo.jpg
-description: PhD student in high frequency electronics with nanostructured devices based on encapsulated graphene
+description: Embedded software developer, PhD in semiconductor physics
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
